--- a/beamie.yml
+++ b/beamie.yml
@@ -1,6 +1,6 @@
 # Data/media settings
-# db_string: "sqlite:///data/beamie.db"
-db_string: "mysql://beamie:password@localhost/beamie"
+db_string: "sqlite:///data/beamie.db"
+# db_string: "mysql://beamie:password@localhost/beamie"
 allowed_extensions:
   - mp3
   - ogg
@@ -8,14 +8,11 @@ media_paths:
   - ./test/media
 
 # Site/network settings
-site_title: "Test!"
 bind_address: 127.0.0.1
 bind_port: 1337
 
 # Authentication settings
-# token_expiry: 43200  # Seconds until a token expires
-token_expiry: 10  # Seconds until a token expires
-token_issuer: beamie
+token_expiry: 43200  # Seconds until a token expires
 
 # Logging
 logging:
